add a header to the layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <section id="header">
+    <%= render 'layouts/header' %>
+  </section>
+  <%= yield %>
 
 </body>
 </html>
