Adding bower and bootstrap

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
 <h2>Welcome to the IMIQ-API Site</h2>
 <%= show_api_list %>
+
+<div class="panel panel-default">
+  <div class="panel-heading">Heading goes here</div>
+  <div class="panel-body">Panel content goes here</div>
+</div>
