--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
   <section id="header">
     <%= render 'layouts/header' %>
   </section>
-  <%= yield %>
+  <section id="content" class="container">
+    <%= yield %>
+  </section>
 
 </body>
 </html>
