adding example for the sites api documentation

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,26 @@
 <%= show_api_list %>
 
 <div class="panel panel-default">
-  <div class="panel-heading">Heading goes here</div>
-  <div class="panel-body">Panel content goes here</div>
+  <div class="panel-heading"><h1 class="panel-title">/sites.json</h1></div>
+  <div class="panel-body">
+    <fieldset>
+      <legend>Description</legend>
+      <p>This provides a list of sites from the seriescatalog_62 view</p>
+    </fieldset>
+
+    <fieldset>
+      <legend>Output formats</legend>
+      <ul>
+        <li>json</li>
+        <li>geojson</li>
+      </ul>
+    </fieldset>
+    <fieldset>
+      <legend>Parameters</legend>
+      <ul>
+        <li>json</li>
+        <li>geojson</li>
+      </ul>
+    </fieldset>
+  </div>
 </div>
