Adding description of .json; experimenting with headers/footers.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,3 +10,5 @@
       = render 'layouts/header'
     %section#content.container
       = yield
+    %section#footer
+      = render 'layouts/footer'
