Adding style for footer

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -13,5 +13,7 @@ section#header {
 }
 
 section#footer {
-  text-indent: 50px
+  h1 { font-size: 15px; text-indent:115px;}
+  h2 { font-size: 20px; }
 }
+
