Fixing href for variables; updating a description.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -93,12 +93,12 @@
 	<div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
           /variables.{format}
         </a>
       </h4>
     </div>
-    <div id="collapseTwo" class="panel-collapse collapse">
+    <div id="collapseThree" class="panel-collapse collapse">
       <div class="panel-body">
 		    <p> Description  </p>
 				<p> This table provides a complete description of measured variables.</p>
@@ -165,7 +165,7 @@
     <div id="collapseThree" class="panel-collapse collapse">
       <div class="panel-body">
 		    <p> Description  </p>
-				<p> This table contains source information for the Sites that are populating the database.</p>
+				<p> This table contains source information for the sites in the database.</p>
 				<br>
 				<p> Format Types </p>
 				  <ul>
