--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -157,12 +157,12 @@
 	<div class="panel panel-default">
 	    <div class="panel-heading">
 	      <h4 class="panel-title">
-	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
 	          /sources.{format}
 	        </a>
 	      </h4>
 	    </div>
-    <div id="collapseThree" class="panel-collapse collapse">
+    <div id="collapseFour" class="panel-collapse collapse">
       <div class="panel-body">
 		    <p> Description  </p>
 				<p> This table contains source information for the sites in the database.</p>
