--- a/app/views/welcome/_sourcedescription.html.erb
+++ b/app/views/welcome/_sourcedescription.html.erb
@@ -1,5 +1,5 @@
 <p> Description  </p>
-<p> This table contains source information for the sites in the database.</p>
+<p> Source information for the sites in the Imiq database.</p>
 <br>
 <p> Format Types </p>
   <ul>
