--- a/app/views/welcome/_variablelist.html.erb
+++ b/app/views/welcome/_variablelist.html.erb
@@ -1,5 +1,5 @@
 <p> Description  </p>
-<p> This table provides a partial list of variables (and their possible values) in the Variables table.</p>
+<p> A partial list of field names (and their possible values) from the Variables table.</p>
 <br>
 <p> Format Types </p>
   <ul>
