Adding additional source information; updating hrefs in collapse.

--- a/app/views/welcome/_variabledescription.html.erb
+++ b/app/views/welcome/_variabledescription.html.erb
@@ -1,5 +1,5 @@
 <p> Description  </p>
-<p> This table provides a partial list of fields from the Variables table.</p>
+<p> A partial list of fields from the Variables table</p>
 <br>
 <p> Format Types </p>
   <ul>
