Continuing to update how we provide data for the daily values .csv file.

--- a/app/views/daily_values/daily_values.csv.erb
+++ b/app/views/daily_values/daily_values.csv.erb
@@ -1,3 +1,4 @@
+<%= @sites.pluck(:sitename) %>
 "Site ID", "Day-Month-Year", "Hour:Min:Sec (UTC)", "<%= @dailyvalues_csv_header %>"
 <% @dailyvalues.each do |row| %>
 <%= row.siteid %>, <%= row.utcdatetime.strftime(%"%d-%m-%Y") %>, <%= row.utcdatetime.strftime(%"%X") %>, <%= row.datavalue %>
