Change date format.

--- a/app/views/daily_values/daily_values.csv.erb
+++ b/app/views/daily_values/daily_values.csv.erb
@@ -1,5 +1,5 @@
 <%= @sites.pluck(:sitename) %>
-"Site ID", "Day-Month-Year", "Hour:Min:Sec (UTC)", "<%= @dailyvalues_csv_header %>"
+"Site ID", "Year-Month-Day", "Hour:Min:Sec (UTC)", "<%= @dailyvalues_csv_header %>"
 <% @dailyvalues.each do |row| %>
-<%= row.siteid %>, <%= row.utcdatetime.strftime(%"%d-%m-%Y") %>, <%= row.utcdatetime.strftime(%"%X") %>, <%= row.datavalue %>
+<%= row.siteid %>, <%= row.utcdatetime.strftime(%"%Y-%m-%d") %>, <%= row.utcdatetime.strftime(%"%X") %>, <%= row.datavalue %>
 <% end %>
