cleanup the headers in the csv files

--- a/app/views/daily_values/daily_values.csv.erb
+++ b/app/views/daily_values/daily_values.csv.erb
@@ -1,5 +1,6 @@
-<%= @sites.pluck(:sitename) %>
-"Site ID", "Year-Month-Day", "Hour:Min:Sec (UTC)", "<%= @dailyvalues_csv_header %>"
+<% site_names = @sites.pluck(:sitename) %>
+Site(s): <%= site_names.join(', ').html_safe %>
+Site ID, Year-Month-Day, Hour:Min:Sec (UTC), <%= @dailyvalues_csv_header %>
 <% @dailyvalues.each do |row| %>
 <%= row.siteid %>, <%= row.utcdatetime.strftime(%"%Y-%m-%d") %>, <%= row.utcdatetime.strftime(%"%X") %>, <%= row.datavalue %>
 <% end %>
