--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -121,12 +121,12 @@
 	<div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseVariables">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseVariablesShow">
           /variables/{variableid}.{format}
         </a>
       </h4>
     </div>
-    <div id="collapseVariables" class="panel-collapse collapse">
+    <div id="collapseVariablesShow" class="panel-collapse collapse">
       <div class="panel-body">
 			  <div id="name">
 			    <p> Description  </p>
