--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,48 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseDaily">
+          /daily/{derivedvariable}.csv
+        </a>
+      </h4>
+    </div>
+    <div id="collapseDaily" class="panel-collapse collapse">
+      <div class="panel-body">
+			  <div id="name">
+			    <p> Description  </p>
+					<p> Daily summaries for selected geophysical parameters.</p>
+          <br>
+					<p> derivedvariable</p>		
+				    <ul>
+				      <li>air_temp</li>
+              <li>relative_humidity</li>
+              <li>discharge</li>
+              <li>precipitation</li>
+              <li>snow_depth</li>
+              <li>snow_water_equivalent</li>
+              <li>wind_direction</li>
+              <li>wind_speed</li>
+				    </ul>		
+          <br>
+					<p> Format Types </p>
+					  <ul>
+					    <li>csv</li>
+					  </ul>
+          <br>            
+  				<p> Query Parameters </p>
+  					<ul>
+  					  <li>siteid</li>
+  					  <li>startdate (Format: YYYYMMDD)</li>
+  					  <li>enddate (Format: YYYYMMDD)</li>
+            </ul>
+				  <br>
+			  </div>
+		  </div>	
+		</div>
+	</div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapseSites">
           /sites.{format}
         </a>
