adding support for z and caching envelopes

--- a/app/views/derived_values/index.csv.erb
+++ b/app/views/derived_values/index.csv.erb
@@ -2,7 +2,7 @@
 ERROR: <%= flash[:error] %>
 <% end %>
 Site(s): <%= @site_names.join(', ').html_safe %>
-Site ID, Year-Month-Day, Hour:Min:Sec (UTC), No Units Yet
+Site ID, Year-Month-Day, Hour:Min:Sec (UTC), Lat, Lon, No Units Yet
 <% @values.each do |row| %>
-<%= row.siteid %>, <%= row.utcdatetime.strftime(%"%Y-%m-%d") %>, <%= row.utcdatetime.strftime(%"%X") %>, <%= row.datavalue %>
+<%= row.siteid %>, <%= row.utcdatetime.strftime(%"%Y-%m-%d") %>, <%= row.utcdatetime.strftime(%"%X") %>, <%= row.site.lat %>, <%= row.site.lng %>, <%= row.datavalue %>
 <% end %>
